# money_parser_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: booking.rs  lib.rs  main.rs  reader.rs  writer.rs
src/reader/: easybank.rs  neon.rs  revolut.rs  sgkb.rs
src/writer/: homebank.rs
