[package]
name = "money_parser_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_trim = "0.4.0"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
clap = { version = "3.2.22", features = ["derive"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
